# VovochkaCore

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
client/: Dockerfile  package-lock.json  package.json
client/src/: App.jsx
client/src/app/: router.jsx
client/src/pages/JewPage/: JewPage.jsx  JewPage.module.scss
client/src/pages/MainPage/: MainPage.jsx  MainPage.module.scss
client/src/pages/RandomAnecdote/: RandomAnecdote.jsx
client/src/pages/RzhevskyPage/: RzhevskyPage.jsx
client/src/pages/VovaPage/: VovaPage.jsx
client/src/shared/Link/: LinkPage.jsx  (+1 more)
server/: Dockerfile  mypy.ini  pyproject.toml  ruff.toml
server/src/: alembic.ini  main.py
server/src/core/: db.py  settings.py
server/src/enums/: tags.py
server/src/exceptions/: anecdote_exceptions.py
server/src/migraions/: env.py
server/src/migraions/versions/: 5f30aa1d1150_create_anecdote.py  76f3a3fa2e7c_create_anecdote_model.py
server/src/migrations/: env.py
server/src/migrations/versions/: 028d8bc7e9e2_create_admin_model.py  27b1a258c9f4_create_models.py  3a8645936fbb_fix_model.py  5e29c50cc816_unique_name_for_anecdote_model.py  60c1bacb623b_fix_tag_column.py  fcd4848cfa3a_create_admin_model_again.py
server/src/models/: admin.py  anecdote.py  base.py
server/src/repositories/: anecdote_repository.py
server/src/routers/: anecdote.py  anecdote_router.py
server/src/schemas/: anecdote_schema.py
server/src/service/: anecdote_service.py
server/src/services/: anecdote_service.py
server/src/utils/admin/: auth.py  create_admin.py  views.py
