[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["SamuraiJeka <offissit123321@gmail.com>"]
readme = "../README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = "^0.115.11"
sqlalchemy = "^2.0.38"
pydantic-settings = "^2.8.1"
uvicorn = "^0.34.0"
ruff = "^0.9.10"
mypy = "^1.15.0"
asyncpg = "^0.30.0"
alembic = "^1.15.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"